added theme for game arcade

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <h1>Game Arcade</h1>
     </header>
+    <!--
     <nav aria-label="Menu">
       <ul>
         <li>Game1</li>
@@ -18,23 +19,37 @@
         <li>Game3</li>
       </ul>
     </nav>
-
-    <div id="slideshow">
-      <button id="left"><span>&#8592;</span></button>
-      <img id="preview-img" src="./bird.jpg" alt="a bird" />
-      <button id="right"><span>&#8594;</span></button>
-    </div>
+    -->
     <main>
         <section id="game-preview" class="fade">
       <a href="./game1.html" target="_self" id="play-button">
-          <img src="./bird.jpg" alt="a bird" />
+          <img src="./game1.jpg" alt="a bird" />
           <div id="verbal-overview">
-            <h2>Game Title</h2>
-            <p>game description</p>
+            <h2>Jumping Dino</h2>
+            <p>overcome obstacles by jumping over them</p>
+          </div>
+      </a>
+        </section>
+        <section id="game-preview" class="fade">
+      <a href="./game1.html" target="_self" id="play-button">
+          <img src="./game1.jpg" alt="a bird" />
+          <div id="verbal-overview">
+            <h2>Jumping Dino</h2>
+            <p>overcome obstacles by jumping over them</p>
+          </div>
+      </a>
+        </section>
+        <section id="game-preview" class="fade">
+      <a href="./game1.html" target="_self" id="play-button">
+          <img src="./game1.jpg" alt="a bird" />
+          <div id="verbal-overview">
+            <h2>Jumping Dino</h2>
+            <p>overcome obstacles by jumping over them</p>
           </div>
       </a>
         </section>
     </main>
-    <footer>Copyright © 2024 Amira Basyouni</footer>
+    <footer>Copyright © 2024 Amira Basyouni<br>
+	    Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a>
   </body>
 </html>
