--- a/game1.html
+++ b/game1.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="first of three games" />
     <link href="styles-game1.css" rel="stylesheet" />
-    <title>Jumping Dinosaur</title>
+    <title>Jumping Dino</title>
   </head>
   <body>
-    <header>Jumping Dinosaur</header>
+	  <header><a href="index.html"><h1> Return To Game Arcade</h1></a></header>
+	  <h2>Dino Game</h2>
     <main>
 	<canvas id="game-canvas">Jumping Dinosaur Game Canvas</canvas>
     </main>
-    <footer>Copyright © 2024 Amira Basyouni</footer>
+    <footer>Copyright © 2024 Amira Basyouni<br>
+	    Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a>
     <script src="./game1.js">Rendering Dinosaur Game</script>
   </body>
 </html>
