--- a/index.html
+++ b/index.html
@@ -11,19 +11,10 @@
     <header>
       <h1>Game Arcade</h1>
     </header>
-    <!--
-    <nav aria-label="Menu">
-      <ul>
-        <li>Game1</li>
-        <li>Game2</li>
-        <li>Game3</li>
-      </ul>
-    </nav>
-    -->
     <main>
         <section id="game-preview" class="fade">
       <a href="./game1.html" target="_self" id="play-button">
-          <img src="./game1.jpg" alt="a bird" />
+          <img src="./game1.jpg" alt="a black and white baby dino" />
           <div id="verbal-overview">
             <h2>Jumping Dino</h2>
             <p>overcome obstacles by jumping over them</p>
@@ -31,11 +22,11 @@
       </a>
         </section>
         <section id="game-preview" class="fade">
-      <a href="./game1.html" target="_self" id="play-button">
-          <img src="./game1.jpg" alt="a bird" />
+      <a href="./game2.html" target="_self" id="play-button">
+          <img src="./game2.jpg" alt="a bird" />
           <div id="verbal-overview">
-            <h2>Jumping Dino</h2>
-            <p>overcome obstacles by jumping over them</p>
+            <h2>Flying bird</h2>
+            <p>my edition of the infamous flappy bird</p>
           </div>
       </a>
         </section>
