--- a/game1.html
+++ b/game1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="first of three games" />
+    <meta name="description" content="jumping dino game" />
     <link href="styles-game1.css" rel="stylesheet" />
     <title>Jumping Dino</title>
   </head>
