added third game but still needs stylistic edites to match theme of last two games

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section id="game-preview" class="fade">
       <a href="./game2.html" target="_self" id="play-button">
-          <img src="./game2.jpg" alt="a bird" />
+          <img src="./game2.jpg" alt="a bird flying" />
           <div id="verbal-overview">
             <h2>Flying bird</h2>
             <p>my edition of the infamous flappy bird</p>
@@ -31,11 +31,11 @@
       </a>
         </section>
         <section id="game-preview" class="fade">
-      <a href="./game1.html" target="_self" id="play-button">
-          <img src="./game1.jpg" alt="a bird" />
+      <a href="./game3.html" target="_self" id="play-button">
+          <img src="./game3.jpg" alt="tetris game board" />
           <div id="verbal-overview">
-            <h2>Jumping Dino</h2>
-            <p>overcome obstacles by jumping over them</p>
+            <h2>Tetris</h2>
+            <p>complete rows using the descending blocks</p>
           </div>
       </a>
         </section>
