removed playbutton and added a How To Play section to each game

--- a/game1.html
+++ b/game1.html
@@ -12,6 +12,7 @@
 	  <h2>Dino Game</h2>
     <main>
 	<canvas id="game-canvas">Jumping Dinosaur Game Canvas</canvas>
+	<section><h3>How To Play</h3><p>press the spacebar to jump over obstacles</p></section>
     </main>
     <footer>Copyright © 2024 Amira Basyouni<br>
 	    Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a>
