--- a/game3.html
+++ b/game3.html
@@ -12,7 +12,8 @@
 	<h2>Tetris</h2>
 	<main>
 		<canvas id ="game-canvas">Tetris Canvas</canvas>
-		<button id="playbutton" onclick="playButtonClicked();">play</button>
+		<!--<button id="playbutton" onclick="playButtonClicked();">play</button>-->
+		<section><h3>How To Play</h3><p>press space once the block is in the right position or press down arrow key to descend faster. Press the up arrow key to rotate the block</p></section>
 	</main>
 	<footer>Copyright © 2024 Amira Basyouni<br>
 	Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a></footer>
