removed files from git because I already put them in a folder. Also edited index.html to link to files properly

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </header>
     <main>
         <section id="game-preview" class="fade">
-      <a href="./game1.html" target="_self" id="play-button">
-          <img src="./game1.jpg" alt="a black and white baby dino" />
+      <a href="./game1/game1.html" target="_self" id="play-button">
+          <img src="./game1/game1.jpg" alt="a black and white baby dino" />
           <div id="verbal-overview">
             <h2>Jumping Dino</h2>
             <p>overcome obstacles by jumping over them</p>
@@ -22,8 +22,8 @@
       </a>
         </section>
         <section id="game-preview" class="fade">
-      <a href="./game2.html" target="_self" id="play-button">
-          <img src="./game2.jpg" alt="a bird flying" />
+      <a href="./game2/game2.html" target="_self" id="play-button">
+          <img src="./game2/game2.jpg" alt="a bird flying" />
           <div id="verbal-overview">
             <h2>Flying bird</h2>
             <p>my edition of the infamous flappy bird</p>
@@ -31,8 +31,8 @@
       </a>
         </section>
         <section id="game-preview" class="fade">
-      <a href="./game3.html" target="_self" id="play-button">
-          <img src="./game3.jpg" alt="tetris game board" />
+      <a href="./game3/game3.html" target="_self" id="play-button">
+          <img src="./game3/game3.jpg" alt="tetris game board" />
           <div id="verbal-overview">
             <h2>Tetris</h2>
             <p>complete rows using the descending blocks</p>
