used prettier and added a closing footer tag in two files

--- a/index.html
+++ b/index.html
@@ -12,35 +12,41 @@
       <h1>Game Arcade</h1>
     </header>
     <main>
-        <section id="game-preview" class="fade">
-      <a href="./game1/game1.html" target="_self" id="play-button">
+      <section id="game-preview" class="fade">
+        <a href="./game1/game1.html" target="_self" id="play-button">
           <img src="./game1/game1.jpg" alt="a black and white baby dino" />
           <div id="verbal-overview">
             <h2>Jumping Dino</h2>
             <p>overcome obstacles by jumping over them</p>
           </div>
-      </a>
-        </section>
-        <section id="game-preview" class="fade">
-      <a href="./game2/game2.html" target="_self" id="play-button">
+        </a>
+      </section>
+      <section id="game-preview" class="fade">
+        <a href="./game2/game2.html" target="_self" id="play-button">
           <img src="./game2/game2.jpg" alt="a bird flying" />
           <div id="verbal-overview">
             <h2>Flying bird</h2>
             <p>my edition of the infamous flappy bird</p>
           </div>
-      </a>
-        </section>
-        <section id="game-preview" class="fade">
-      <a href="./game3/game3.html" target="_self" id="play-button">
+        </a>
+      </section>
+      <section id="game-preview" class="fade">
+        <a href="./game3/game3.html" target="_self" id="play-button">
           <img src="./game3/game3.jpg" alt="tetris game board" />
           <div id="verbal-overview">
             <h2>Tetris</h2>
             <p>complete rows using the descending blocks</p>
           </div>
-      </a>
-        </section>
+        </a>
+      </section>
     </main>
-    <footer>Copyright © 2024 Amira Basyouni<br>
-	    Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a>
+    <footer>
+      Copyright © 2024 Amira Basyouni<br />
+      Wallpaper by
+      <a
+        href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html"
+        >360modena on Wallpapers.com</a
+      >
+    </footer>
   </body>
 </html>
