--- a/game1/game1.html
+++ b/game1/game1.html
@@ -8,14 +8,27 @@
     <title>Jumping Dino</title>
   </head>
   <body>
-	  <header><a href="../index.html"><h1> Return To Game Arcade</h1></a></header>
-	  <h2>Dino Game</h2>
+    <header>
+      <a href="../index.html"><h1>Return To Game Arcade</h1></a>
+    </header>
+    <h2>Dino Game</h2>
     <main>
-	<canvas id="game-canvas">Jumping Dinosaur Game Canvas</canvas>
-	<section><h3>How To Play</h3><p>press the spacebar to jump over obstacles</p></section>
+      <canvas id="game-canvas">Jumping Dinosaur Game Canvas</canvas>
+      <section>
+        <h3>How To Play</h3>
+        <p>press the spacebar to jump over obstacles</p>
+      </section>
     </main>
-    <footer>Copyright © 2024 Amira Basyouni<br>
-	    Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a>
-    <script src="./game1.js">Rendering Dinosaur Game</script>
+    <footer>
+      Copyright © 2024 Amira Basyouni<br />
+      Wallpaper by
+      <a
+        href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html"
+        >360modena on Wallpapers.com</a
+      >
+      <script src="./game1.js">
+        Rendering Dinosaur Game
+      </script>
+    </footer>
   </body>
 </html>
