--- a/game2/game2.html
+++ b/game2/game2.html
@@ -1,20 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="flying bird game">
-	<link rel="stylesheet" href="styles-game2.css">
-	<title>Flying Bird</title>
-</head>
-<body>
-	<header><a href="../index.html"><h1>Return To Game Arcade</h1></a></header>
-	<h2>Flying Bird Game</h2>
-	<main><canvas id ="game-canvas">Flying Bird Game Canvas</canvas>
-		<section><h3>How To Play</h3><p>keep pressing spacebar to keep the bird flying. Press spacebar more quickly to fly higher and more slowly to fly lower</p></section>
-	</main>
-	<footer>Copyright © 2024 Amira Basyouni<br>
-	Wallpaper by <a href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html">360modena on Wallpapers.com</a></footer>
-	<script src="./game2.js">Rendering Flying bird game</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="flying bird game" />
+    <link rel="stylesheet" href="styles-game2.css" />
+    <title>Flying Bird</title>
+  </head>
+  <body>
+    <header>
+      <a href="../index.html"><h1>Return To Game Arcade</h1></a>
+    </header>
+    <h2>Flying Bird Game</h2>
+    <main>
+      <canvas id="game-canvas">Flying Bird Game Canvas</canvas>
+      <section>
+        <h3>How To Play</h3>
+        <p>
+          keep pressing spacebar to keep the bird flying. Press spacebar more
+          quickly to fly higher and more slowly to fly lower
+        </p>
+      </section>
+    </main>
+    <footer>
+      Copyright © 2024 Amira Basyouni<br />
+      Wallpaper by
+      <a
+        href="https://wallpapers.com/background/pixel-background-dydt7w471f7t63js.html"
+        >360modena on Wallpapers.com</a
+      >
+    </footer>
+    <script src="./game2.js">
+      Rendering Flying bird game
+    </script>
+  </body>
 </html>
